tests/good/0/main.sm
(module Main imports (StdLib))

(vars (
  (let A 23)
  (let B 42)
))


(functions (
  (function simpler ()
    (begin
      (set! A 0)
      (let d A)
      d
    )
  )

  (function simple ()
    (begin
      (let d 23)
      d
    )
  )

  (function fun ()
    (begin
      (simple)
      (simpler)
    )
  )

  (function small ()
    (begin
      (let z 0)
      z))

  (function simplest () 42)

  (function main ()
    (begin
      # (let d 23)
      # (let c 42)
      # (fun)
      (let a (simplest))
      # (write! a)

      (if (< tt 23) (set! a ff) (set! a tt))
      a
      # B
    )
  )

))
