tests/bad/leaky_var_if_true/main.sm
(module Main imports (StdLib))

(vars ())

(functions (
  (function main ()
    (begin
      (if tt
        (let x 0)
        0
      )
      (set! x 0) # Invalid
      0
    )
  )
))
